@@ -5,8 +5,8 @@
 // Or the HBL itself.
 // If the menu gets destroyed after the homebrew is loaded, it doesn't matter
 
-#define EBOOT_SET_ADDRESS 0x08804000
-#define EBOOT_PATH_ADDRESS 0x08805000
-#define MENU_LOAD_ADDRESS 0x08810000 //see linker_menu.x!
+#define EBOOT_SET_ADDRESS 0x08D14000
+#define EBOOT_PATH_ADDRESS 0x08D15000
+#define MENU_LOAD_ADDRESS 0x08D20000 //see linker_menu.x!
 
 #endif
